--- a/src/src/components/ApiRequest/ApiRequest.scss
+++ b/src/src/components/ApiRequest/ApiRequest.scss
@@ -43,4 +43,9 @@ body {
     &__btn:hover {
         cursor: pointer;
       }
+
+    // &__section {
+    //   background-color: white;
+
+    // }
   }
