--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+@import "./components/Navigator/navigator";
+@import "./pages/Pokedex/Pokedex.scss";
+
+
 .App {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
