--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,6 @@
 @import "./components/Navigator/navigator";
 @import "./pages/Pokedex/Pokedex.scss";
+@import "./pages/Pokedex-list/Pokedex-list.scss";
 
 
 .App {
