--- a/src/pages/Pokedex/Pokedex.scss
+++ b/src/pages/Pokedex/Pokedex.scss
@@ -11,7 +11,7 @@ body {
     &__title {
       background-color: #6ea4bb;
       width: 100%;
-      height: 300px;
+      height: 100vh;
   
       display: flex;
       flex-direction: column;
@@ -43,9 +43,37 @@ body {
     &__btn:hover {
         cursor: pointer;
       }
+  }
 
-    // &__section {
-    //   background-color: white;
+  .pokedex__ul {
+    display: flex;
+    padding-inline-start: 0;
+    margin-top: 30px;
+  }
 
-    // }
+  .pokedex__item {
+    width: 250px;
+    height: 255px;
+    border-radius: 10px;
+    list-style: none;
+    /* padding: 40px; */
+    background-color: #f4f4f4;
+    color: #222;
+    text-align: center;
+  }
+  
+  .pokedex__name {
+    font-size: 25px;
+    margin-top: 0px;
+  }
+  
+  .pokedex__subtitle {
+    font-size: 20px;
+    font-weight: normal;
+    margin-bottom: 20px;
+  }
+  
+  .pokedex__image {
+    width: 200px;
+    height: 200px;
   }
