--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 @import "./components/Navigator/navigator";
 @import "./pages/Pokedex/Pokedex.scss";
 @import "./pages/Pokedex-list/Pokedex-list.scss";
+@import "./pages/SinglePokemon/singlePokemon";
 
 
 .App {
