--- a/src/pages/Pokedex-list/Pokedex-list.scss
+++ b/src/pages/Pokedex-list/Pokedex-list.scss
@@ -1,32 +1,31 @@
-.pokedex__ul {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-gap: 20px;
-  padding-inline-start: 0;
-  margin-top: 30px;
-}
+// .pokedex {
+//   display: flex;
+//     flex-direction: column;
+//     font-size: 24px;
+//     height: 500px;
+// }
 
-.pokedex__item {
-  border-radius: 10px;
-  list-style: none;
-  /* padding: 40px; */
-  background-color: #f4f4f4;
-  color: #222;
-  text-align: center;
-}
+// .pokedex__item {
+//   border-radius: 10px;
+//   list-style: none;
+//   /* padding: 40px; */
+//   background-color: #f4f4f4;
+//   color: #222;
+//   text-align: center;
+// }
 
-.pokedex__name {
-  font-size: 25px;
-  margin-top: 0px;
-}
+// .pokedex__name {
+//   font-size: 25px;
+//   margin-top: 0px;
+// }
 
-.pokedex__subtitle {
-  font-size: 20px;
-  font-weight: normal;
-  margin-bottom: 20px;
-}
+// .pokedex__subtitle {
+//   font-size: 20px;
+//   font-weight: normal;
+//   margin-bottom: 20px;
+// }
 
-.pokedex__image {
-  width: 200px;
-  height: 200px;
-}
+// .pokedex__image {
+//   width: 200px;
+//   height: 200px;
+// }
