--- a/src/pages/Pokedex/Pokedex.scss
+++ b/src/pages/Pokedex/Pokedex.scss
@@ -5,17 +5,22 @@ body {
   
   .pokedex {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    // justify-content: center;
     font-size: 24px;
+    height: 500px;
+    background-color: #6ea4bb;
   
     &__title {
-      background-color: #6ea4bb;
-      width: 100%;
-      height: 100vh;
-  
       display: flex;
       flex-direction: column;
       align-items: center;
+
+      background-color: #6ea4bb;
+      width: 100%;
+      height: 1000px;
+      padding: 25px 0px;
+  
       color:  #FECA1B;
     }
   
@@ -62,18 +67,4 @@ body {
     text-align: center;
   }
   
-  .pokedex__name {
-    font-size: 25px;
-    margin-top: 0px;
-  }
   
-  .pokedex__subtitle {
-    font-size: 20px;
-    font-weight: normal;
-    margin-bottom: 20px;
-  }
-  
-  .pokedex__image {
-    width: 200px;
-    height: 200px;
-  }
